--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <img src="./assets/Images/pakistaniWearKids-1.webp" alt="Promotion 3">
             <div class="slide-content">
                 <h2>Special Offer</h2>
-                <p>Free shipping on orders over $50</p>
+                <p>Free shipping on orders over pkr 50</p>
                 <button class="shop-now"><a href="./ProductsScreen/productPage.html">Shop Now</a> </button>
             </div>
         </div>
@@ -79,25 +79,25 @@
             <div class="product-card">
                 <img src="./assets/Images/pakistaniWear-1.webp" alt="Pakistani dress for women">
                 <h3>Product Name</h3>
-                <p class="price">$99.99</p>
+                <p class="price">pkr 50.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
                 <img src="./assets/Images/pakistaniWearMen-2.webp" alt="Pakistani clothe for men">
                 <h3>Product Name</h3>
-                <p class="price">$99.99</p>
+                <p class="price">pkr 90.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
                 <img src="./assets/Images/pakistaniWearKids-2.webp" alt="Pakistani clothes for kids">
                 <h3>Product Name</h3>
-                <p class="price">$99.99</p>
+                <p class="price">pkr 50.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
                 <img src="./assets/Images/PakistaniWearKids-5.webp" alt="Pakistani clothes for kids">
                 <h3>Product Name</h3>
-                <p class="price">$99.99</p>
+                <p class="price">pkr 90.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <!-- Add more product cards as needed -->
