--- a/CartScreen/cartPage.html
+++ b/CartScreen/cartPage.html
@@ -18,7 +18,7 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../ProductsScreen/productPage.html">Products</a></li>
-            <li><a href="../CartScreen/cartPage.html" class="cart-link">Cart
+            <li><a href="./cartPage.html" class="cart-link">Cart
                     <span class="cart-counter">0
                 </a>
             </li>
