--- a/CartScreen/cartPage.html
+++ b/CartScreen/cartPage.html
@@ -16,7 +16,7 @@
     <nav class="navbar">
         <div class="logo">DesiWear</div>
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/ProductsScreen/productPage.html">Products</a></li>
             <li><a href="/cartPage.html" class="cart-link">Cart
                     <span class="cart-counter">0
