--- a/ProductsScreen/productPage.html
+++ b/ProductsScreen/productPage.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product Catalog - My E-commerce Store</title>
-    <link rel="stylesheet" href="../app.css">
+    <link rel="stylesheet" href="/app.css">
     <link rel="stylesheet" href="/ProductsScreen/productPage.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
@@ -16,7 +16,7 @@
       <nav class="navbar">
         <div class="logo">DesiWear</div>
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/ProductsScreen/productPage">Products</a></li>
             <li><a href="/CartScreen/cartPage" class="cart-link">Cart
                 <span class="cart-counter">0
