--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My E-commerce Store</title>
     <link rel="stylesheet" href="/app.css">
-    <link rel="stylesheet" href="/index.css">
+    <link rel="stylesheet" href="/index.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
@@ -32,7 +32,7 @@
 <div class="slider-container">
     <div class="slider">
         <div class="slide">
-            <img src="/assets/Images/PakistaniWearKids-2.webp" alt="Promotion 1">
+            <img src="/assets/Images/pakistaniWearKids-2.webp" alt="Promotion 1">
             <div class="slide-content">
                 <h2>Sale! Sale! Sale!</h2>
                 <p>Up to 50% off on selected items</p>
