--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My E-commerce Store</title>
-    <link rel="stylesheet" href="/app.css">
-    <link rel="stylesheet" href="/index.html">
+    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
 </head>
@@ -14,9 +14,9 @@
     <nav class="navbar">
         <div class="logo">DesiWear</div>
         <ul class="nav-links">
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/ProductsScreen/productPage.html">Products</a></li>
-            <li><a href="/CartScreen/cartPage.html" class="cart-link">Cart
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./ProductsScreen/productPage.html">Products</a></li>
+            <li><a href="./CartScreen/cartPage.html" class="cart-link">Cart
                 <span class="cart-counter">0
             </a>
             </li>
@@ -32,27 +32,27 @@
 <div class="slider-container">
     <div class="slider">
         <div class="slide">
-            <img src="/assets/Images/pakistaniWearKids-2.webp" alt="Promotion 1">
+            <img src="./assets/Images/pakistaniWearKids-2.webp" alt="Promotion 1">
             <div class="slide-content">
                 <h2>Sale! Sale! Sale!</h2>
                 <p>Up to 50% off on selected items</p>
-                <button class="shop-now"><a href="/ProductsScreen/productPage.html">Shop Now</a> </button>
+                <button class="shop-now"><a href="./ProductsScreen/productPage.html">Shop Now</a> </button>
             </div>
         </div>
         <div class="slide">
-            <img src="/assets/Images/PakistaniWearKids-5.webp" alt="Promotion 2">
+            <img src="./assets/Images/PakistaniWearKids-5.webp" alt="Promotion 2">
             <div class="slide-content">
                 <h2>New Arrivals</h2>
                 <p>Check out our latest collection</p>
-                <button class="shop-now"><a href="/ProductsScreen/productPage.html">Shop Now</a> </button>
+                <button class="shop-now"><a href="./ProductsScreen/productPage.html">Shop Now</a> </button>
             </div>
         </div>
         <div class="slide">
-            <img src="/assets/Images/pakistaniWearKids-1.webp" alt="Promotion 3">
+            <img src="./assets/Images/pakistaniWearKids-1.webp" alt="Promotion 3">
             <div class="slide-content">
                 <h2>Special Offer</h2>
                 <p>Free shipping on orders over pkr 50</p>
-                <button class="shop-now"><a href="/ProductsScreen/productPage.html">Shop Now</a> </button>
+                <button class="shop-now"><a href="./ProductsScreen/productPage.html">Shop Now</a> </button>
             </div>
         </div>
     </div>
@@ -73,31 +73,31 @@
     <section class="products" id="products">
         <div class="featured-products-header">
             <h2>Featured Products</h2>
-            <h2><a href="/ProductsScreen/productPage.html">View All</a></h2>
+            <h2><a href="./ProductsScreen/productPage.html">View All</a></h2>
         </div>
         <div class="product-grid">
             <div class="product-card">
-                <img src="/assets/Images/pakistaniWear-1.webp" alt="Pakistani dress for women">
+                <img src="./assets/Images/pakistaniWear-1.webp" alt="Pakistani dress for women">
                 <h3>Product Name</h3>
                 <p class="price">pkr 50.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/assets/Images/pakistaniWearMen-2.webp" alt="Pakistani clothe for men">
+                <img src="./assets/Images/pakistaniWearMen-2.webp" alt="Pakistani clothe for men">
                 <h3>Product Name</h3>
                 <p class="price">pkr 90.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <div class="product-card">
-                <img src="/assets/Images/pakistaniWearKids-2.webp" alt="Pakistani clothes for kids">
+                <img src="./assets/Images/pakistaniWearKids-2.webp" alt="Pakistani clothes for kids">
+                <h3>Product Name</h3>
+                <p class="price">pkr 99.99</p>
+                <button class="add-to-cart">Add to Cart</button>
+            </div>
+            <div class="product-card">
+                <img src="./assets/Images/PakistaniWearKids-5.webp" alt="Pakistani clothes for kids">
                 <h3>Product Name</h3>
                 <p class="price">pkr 50.99</p>
-                <button class="add-to-cart">Add to Cart</button>
-            </div>
-            <div class="product-card">
-                <img src="/assets/Images/PakistaniWearKids-5.webp" alt="Pakistani clothes for kids">
-                <h3>Product Name</h3>
-                <p class="price">pkr 90.99</p>
                 <button class="add-to-cart">Add to Cart</button>
             </div>
             <!-- Add more product cards as needed -->
@@ -105,8 +105,8 @@
     </section>
 
     <!--Js-->
-    <script src="/CartScreen/cartPage.js"></script>
-    <script src="/slider.js" defer></script>
+    <script src="./CartScreen/cartPage.js"></script>
+    <script src="./slider.js" defer></script>
 
 
     
